--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MLIUC Admin</title>
+    <title>MLIUC Dashboard</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,15 +19,15 @@
         <div class="sidebar-menu">
             <ul>
                 <li>
-                    <a href="" class="active"><span class="las la-table" ></span>
+                    <a href="index.html" class="active"><span class="las la-table" ></span>
                     <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-bookmark" ></span>
+                    <a href="matiere.html"><span class="las la-bookmark" ></span>
                     <span>Matieres</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-user-graduate" ></span>
+                    <a href="classe.html"><span class="las la-user-graduate" ></span>
                     <span>Classes</span></a>
                 </li>
                 <li>
@@ -115,8 +115,8 @@
                         <div class="card-header">
                             <h3>Matière Semestre</h3>
 
-                            <button>See all <span class="las la-arrow-right">
-                            </span></button>
+                            <a href="matiere.html"> <button>Tout voir <span class="las la-arrow-right">
+                            </span></button></a>
                         </div>
 
                         <div class="card-body">
@@ -200,20 +200,8 @@
                                                 <span class="status purple"></span> En progression
                                             </td>
                                         </tr>
-                                        <tr>
-                                            <td>Developpement Web</td>
-                                            <td>Base de donnée</td>
-                                            <td>
-                                                <span class="status pink"></span> Terminé
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>UML</td>
-                                            <td>Architecture des ordinateurs</td>
-                                            <td>
-                                                <span class="status orange"></span> A Revoir
-                                            </td>
-                                        </tr>
+
+
                                     </tbody>
                                 </table>
                             </div>
@@ -227,7 +215,7 @@
                         <div class="card-header">
                             <h3>Nouveaux Inscrits</h3>
 
-                            <button>See all <span class="las la-arrow-right">
+                            <button>Tout voir <span class="las la-arrow-right">
                         </span></button>
                         </div>
 
@@ -314,8 +302,9 @@
             </div>
     </div>
     </main>
-    </div>
+
 
 </body>
 
 </html>
+                          
