--- a/classe.html
+++ b/classe.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MLIUC Dashboard</title>
+    <title>MLIUC Classes</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
+
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                     <span>Classes</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="las la-business-time" ></span>
+                    <a href="datatable.html"><span class="las la-business-time" ></span>
                     <span>Session</span></a>
                 </li>
                 <li>
@@ -47,7 +48,7 @@
             <h2>
                 <label for="nav-toggle">
                     <span class="las la-bars"></span>
-                    </label> Dashboard
+                    </label> Classes
             </h2>
 
             <div class="search-wrapper">
@@ -63,3 +64,141 @@
                 </div>
             </div>
         </header>
+
+        <main>
+            <P>
+                <h3>Choisissez une classe :</h3>
+                <SELECT name="langage">
+                <OPTION>3IL3
+                <OPTION> 3IL4
+                <OPTION>3IL5
+                
+            </SELECT>
+                <div class="recent-grid">
+                    <div class="projects">
+                        <div class="card">
+                            <div class="card-header">
+                                <h2>Liste élèves</h2>
+
+                                <a href="code.html"> <button>Génerer code d'accès <span class="las la-arrow-right">
+                                </span></button></a>
+
+                            </div>
+
+                            <div class="card-body">
+                                <table width="100%">
+                                    <thead>
+                                        <tr>
+                                            <td>N°</td>
+                                            <td>NOM</td>
+                                            <td>PRENOM</td>
+                                            <td>MATRICULE</td>
+                                            <td>SEXE</td>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+
+                                        <tr>
+                                            <td>1</td>
+                                            <td>ADAMS</td>
+                                            <td>DEXTER</td>
+                                            <td>IUC524169</td>
+                                            <td><span class="status blue"></span> M</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>BILOUNGA</td>
+                                            <td>JEAN IVES</td>
+                                            <td>IUC741365</td>
+                                            <td><span class="status blue"></span> M</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>FOTO</td>
+                                            <td>JERRY</td>
+                                            <td>IUC963547</td>
+                                            <td><span class="status blue"></span> M</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td>GHOMSSI</td>
+                                            <td>GRACE</td>
+                                            <td>IUC63533</td>
+                                            <td><span class="status pink"></span> F</td>
+                                        </tr>
+                                        <tr>
+                                            <td>5</td>
+                                            <td>HOUNCHE</td>
+                                            <td>MAEL</td>
+                                            <td>IUC885469</td>
+                                            <td><span class="status blue"></span> M</td>
+                                        </tr>
+                                        <tr>
+                                            <td>6</td>
+                                            <td>KENFACK</td>
+                                            <td>IVANA</td>
+                                            <td>IUC756984</td>
+                                            <td><span class="status pink"></span> F</td>
+                                            <tr>
+                                                <td>7</td>
+                                                <td>KENMOUE</td>
+                                                <td>LAURE</td>
+                                                <td>IUC221364</td>
+                                                <td><span class="status pink"></span> F</td>
+                                            </tr>
+                                            <tr>
+                                                <td>8</td>
+                                                <td>KOUOMI</td>
+                                                <td>IMELDA</td>
+                                                <td>IUC665874</td>
+                                                <td><span class="status pink"></span> F</td>
+                                            </tr>
+                                            <tr>
+                                                <td>9</td>
+                                                <td>KUIDJA</td>
+                                                <td>PAUL</td>
+                                                <td>IUC887445</td>
+                                                <td><span class="status blue"></span> M</td>
+                                            </tr>
+                                            <tr>
+                                                <td>10</td>
+                                                <td>LANDO</td>
+                                                <td>ANGE</td>
+                                                <td>IUC124589</td>
+                                                <td><span class="status pink"></span> F</td>
+                                            </tr>
+                                            <tr>
+                                                <td>11</td>
+                                                <td>LONTSIE</td>
+                                                <td>DILANE</td>
+                                                <td>IUC652398</td>
+                                                <td><span class="status pink"></span> F</td>
+                                            </tr>
+                                            <tr>
+                                                <td>12</td>
+                                                <td>MAKOU</td>
+                                                <td>MARIE-ISABELLE</td>
+                                                <td>IUC744455</td>
+                                                <td><span class="status pink"></span> F</td>
+                                                <tr>
+                                                    <td>13</td>
+                                                    <td>MBAKAM</td>
+                                                    <td>DENIS</td>
+                                                    <td>IUC265874</td>
+                                                    <td><span class="status blue"></span> M</td>
+                                                </tr>
+
+
+                                    </tbody>
+
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+        </main>
+</body>
+
+</html>
